# LaionEye

./: README.md  pyproject.toml
gui/: index.html  vite.config.ts
gui/public/mapKeys/: albion_maps.json
gui/src/: App.module.css  App.tsx  index.css
gui/src/components/: Navigation.module.css  Navigation.tsx
gui/src/pages/: DSPMacro.module.css  DSPMacro.tsx  Radar.module.css  Radar.tsx  Recorder.module.css  Recorder.tsx
gui/src/providers/: WorldProvider.tsx
gui/src/utils/: keyBinding.ts  rendering.tsx
myscripts/: update_data.py  update_events_codes.py
src/laioneye/: __init__.py  __main__.py  requirements.txt
src/laioneye/classes/: character.py  dsp_macro_manager.py  logger.py  packet_handler.py  pynput_runtime_utils.py  radar.py  recorder_manager.py  utils.py  world_data.py
src/laioneye/classes/event_handler/: __init__.py  handle_event_character_equipment_changed.py  handle_event_new_character.py  handle_operation_change_cluster.py  handle_operation_join.py  handle_operation_move.py  radar_event_chest_object.py  radar_event_dungeon_object.py  radar_event_harvestable_object.py  (+5 more)
src/laioneye/gui_dist/: index.html
src/laioneye/photon_packet_parser/: __init__.py  number_serializer.py  photon_packet_parser.py  protocol16_deserializer.py  protocol18_deserializer.py  protocol18_type.py  segmented_packet.py
src/laioneye/resources/: items_by_id.json  items_by_unique_name.json  operation_code_string.txt
src/laioneye/threads/: http_server.py  packet_handler_thread.py  sniffer_thread.py  websocket_server.py
src/tests/: test_radar.py  test_resources_info.py
(+28 files in other folders)
