[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.*",
  "/dump",
  "/log",
  "/pcap",
  "/tests",
  "/gui",
  "/readme_screenshots",
  "/README.md",
  "/*.db"
]

[project.scripts]
laioneye = "laioneye:main"

[project]
name = "laioneye"
version = "1.1.5"
authors = [
  { name="imjangkar", email="imjangkar@gmail.com" },
]
description = "LaionEye tactical overlay for Albion Online"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "scapy==2.5.0",
  "websockets==12.0",
  "pywebview==5.1",
  "pynput==1.7.7",
]
